# FlowCore

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml  requirements.txt
app/api/: auth_deps.py  deps.py  env_deps.py  perm_deps.py
app/api/v1/: admin.py  analysis.py  auth.py  card_holders.py  cards.py  categories.py  connections.py  env_settings.py  environments.py  feedbacks.py  fiscal.py  imports.py  installments.py  invites.py  ledger.py  reports.py  schemas_auth.py  schemas_cards.py  schemas_categories.py  schemas_connections.py  schemas_env.py  schemas_installments.py  schemas_ledger.py  schemas_ledger_list.py  schemas_reports.py  users.py
app/config/: settings.py
app/database/: env.py
app/database/versions/: 24cdbeaedc98_add_avatar_url_to_users_table.py  464d39fc161a_add_image_url_to_feedbacks_table.py  4b9b9509abbe_create_initial_schema.py  4d8e5fb127eb_make_card_holder_nullable_and_add_description.py  77de902af65a_create_import_tasks_table.py  81b3acb7faeb_add_totp_secret.py  a479a3d2483d_add_cpf_to_users.py  b3e47f61c707_remove_unique_cpf_on_card_holders.py  ef8e2f530cc7_create_feedbacks_table.py  f7620ded9ddb_add_user_connections_and_shared_cards.py
app/domain/policies/: membership.py  permissions.py
app/domain/services/: due_date.py  email_service.py  fiscal_lock.py
app/infra/db/: orm_models.py  seed.py  session.py
app/infra/db/seeds/: seed_users.py
app/infra/integrations/: email.py  supabase.py
app/services/: ai_service.py  category_service.py  connection_service.py  fiscal_closing_service.py  import_service.py
app/shared/: security.py
app/templates/emails/: invite-email.html  reset-password-email.html
tests/: conftest.py
tests/integration/: test_environments.py  test_installments.py  test_reports.py  test_security.py  test_transactions.py
