[project]
name = "FlowCore"
version = "1.0.0"
description = "Multi-tenant financial management platform with environment isolation, role-based permissions, fiscal closures, and extensible ledger architecture built with FastAPI and PostgreSQL."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic==1.18.4",
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "anyio==4.12.1",
    "argon2==0.1.10",
    "argon2-cffi==25.1.0",
    "argon2-cffi-bindings==25.1.0",
    "certifi==2026.1.4",
    "cffi==2.0.0",
    "charset-normalizer==3.4.4",
    "click==8.3.1",
    "dnspython==2.8.0",
    "docker==7.1.0",
    "email-validator==2.3.0",
    "execnet==2.1.2",
    "fastapi==0.129.0",
    "fastapi-cli==0.0.23",
    "fastapi-cloud-cli==0.13.0",
    "fastar==0.8.0",
    "greenlet==3.3.1",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httptools==0.7.1",
    "httpx==0.28.1",
    "idna==3.11",
    "iniconfig==2.3.0",
    "jinja2==3.1.6",
    "mako==1.3.10",
    "markdown-it-py==4.0.0",
    "markupsafe==3.0.3",
    "mdurl==0.1.2",
    "packaging==26.0",
    "passlib==1.7.4",
    "pluggy==1.6.0",
    "psycopg2-binary==2.9.11",
    "pycparser==3.0",
    "pydantic==2.12.5",
    "pydantic-core==2.41.5",
    "pydantic-extra-types==2.11.0",
    "pydantic-settings==2.13.0",
    "pygments==2.19.2",
    "pyjwt==2.11.0",
    "pytest==9.0.2",
    "pytest-xdist==3.8.0",
    "python-dotenv==1.2.2",
    "python-multipart==0.0.22",
    "pyyaml==6.0.3",
    "requests==2.32.5",
    "rich==14.3.2",
    "rich-toolkit==0.19.4",
    "rignore==0.7.6",
    "sentry-sdk==2.53.0",
    "shellingham==1.5.4",
    "sqlalchemy==2.0.46",
    "starlette==0.52.1",
    "testcontainers==4.14.1",
    "typer==0.24.0",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "urllib3==2.6.3",
    "uuid6==2025.0.1",
    "uvicorn==0.41.0",
    "uvloop==0.22.1",
    "watchfiles==1.1.1",
    "websockets==16.0",
    "wrapt==2.1.1",
]
